added borders and centers, still need to fix list tables they are too compressed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,20 +20,20 @@
 	/*background-color: red;*/
 	text-align: center;
 	padding: 3em 0em 3em 0em;
+	float: none;
+	margin: 0 auto;
+	
+
 	
 
 	}
-	.box {
-	height: 100%;
-	width: 100%;
 	
-	}
 </style>
 </head>
 
 <html>
 <body>
-<div class = "box">
+
 	<div class = "col-sm-2 home">
 		<%= link_to 'Sign Up', new_user_path %>
 		<p></p>
@@ -43,7 +43,7 @@
 		<p></p>
 		<%= link_to 'Template', "profpage" %>
 	</div>
-</div>
+
 
 
 
