--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
 <style>
 
 	html {
@@ -18,16 +20,9 @@
 	border-radius: 1em;
 	/*background-color: red;*/
 	text-align: center;
+	float: none;
 	margin: 0 auto;
-	
-	
-	
-
-	}
-	.box {
-	height: 100%;
-	width: 40%;
-	text-align: center;
+	padding-bottom: 1.75em;
 	
 	}
 
