--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
+<style>
+
+.center {
+	float: none;
+	margin: 0 auto;
+
+}
+.button {
+	margin-left: 40%
+}
+</style>
 </head>
 <html>
 <body>
-<%= form_tag("/search", method: "get") do %>
+<div class = "col-sm-3 center">
+	<%= form_tag("/search", method: "get") do %>
   <%= label_tag(:q, "Username:") %>
   <%= text_field_tag(:q) %>
   <p></p>
   <%= label_tag(:l, "Password:") %>
   <%= text_field_tag(:l) %>
+  <p></p>
+  <div class = "button">
   <%= submit_tag("Login") %>
+  </div>
+</div>
 <% end %>
 </body>
 </html>
