--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,36 +1,78 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
-<h1>Listing Users</h1>
+<style>
+  html {
+  height: 100%;
+  }
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Password</th>
-      <th>Email</th>
-      <th>Phonenumber</th>
-      <th>Bio</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  }
+  .box {
+  text-align: center;
+  float: none;
+  margin: 0 auto;
+  border-style: solid;
+  border-width: .25em;
+  border-color: black;
+  border-radius: 1em;
+  padding-bottom: 1.75em;
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.password %></td>
-        <td><%= user.email %></td>
-        <td><%= user.phonenumber %></td>
-        <td><%= user.bio %></td>
+  
+  }
+  .run {
+    margin: 0 auto;
+    text-align: left;
+  }
+</style>
+</head>
+<body>
 
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class = "col-sm-6 box">
 
-<br>
+    <p id="notice"><%= notice %></p>
 
-<%= link_to 'New User', new_user_path %>
+    <h1>Listing Users</h1>
+
+    <table class = "run">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Password</th>
+          <th>Email</th>
+          <th>Phonenumber</th>
+          <th>Bio</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td><%= user.name %></td>
+            <td><%= user.password %></td>
+            <td><%= user.email %></td>
+            <td><%= user.phonenumber %></td>
+            
+
+            <td><%= link_to 'Show', user %></td>
+            <td><%= link_to 'Edit', edit_user_path(user) %></td>
+            <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+    <br>
+
+    <%= link_to 'New User', new_user_path %>
+
+</div>
+
+</body>
+</html>
