added view profile, fixed render to redirect, and a whole lot more

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
 	padding: 3em 0em 3em 0em;
 	float: none;
 	margin: 0 auto;
-	
+
 
 	
 
@@ -41,7 +41,7 @@
 		<p></p>
 		<%= link_to 'Login', "login" %>
 		<p></p>
-		<%= link_to 'Template', "profpage" %>
+		<%= link_to 'Template', profile_page_path %>
 	</div>
 
 
