--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,10 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Sign Up', new_user_path %>
+		<p></p>
+		<%= link_to 'List of Users', users_path %>
+		<p></p>
+		<%= link_to 'Login', "login" %>
+		<p></p>
+		<%= link_to 'Template', "profpage" %>
