--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,8 +14,8 @@
   height: 100%;
   }
   .box {
-  text-align: center;
-  float: none;
+    text-align: center;
+    float: none;
   margin: 0 auto;
   border-style: solid;
   border-width: .25em;
@@ -43,11 +43,14 @@
       <thead>
         <tr>
           <th>Name</th>
+          <td>|</td>
           <th>Password</th>
+          <td>|</td>
           <th>Email</th>
+          <td>|</td>
           <th>Phonenumber</th>
-          <th>Bio</th>
-          <th colspan="3"></th>
+
+          
         </tr>
       </thead>
 
@@ -55,8 +58,11 @@
         <% @users.each do |user| %>
           <tr>
             <td><%= user.name %></td>
-            <td><%= user.password %></td>
+            <td></td>
+            <td><%= user.password   %></td>
+            <td></td>
             <td><%= user.email %></td>
+            <td></td>
             <td><%= user.phonenumber %></td>
             
 
@@ -70,7 +76,13 @@
 
     <br>
 
-    <%= link_to 'New User', new_user_path %>
+    <%= link_to 'Sign Up', new_user_path %> 
+    
+    
+    
+    <%= link_to 'Login', "login" %> 
+    
+    <%= link_to 'Template', "profpage" %>
 
 </div>
 
