--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -39,7 +39,14 @@
 		
 			<%= render 'form' %>
 		
-			<%= link_to 'Back', users_path %>
+		
+		<p></p>
+
+		<%= link_to 'List of Users', users_path %>
+		<p></p>
+		<%= link_to 'Login', login_path %>
+		<p></p>
+		<%= link_to 'Template', "profpage" %>
 		
 	</div>
 </div>
