--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@
 		<p></p>
 		<%= link_to 'List of Users', users_path %>
 		<p></p>
-		<%= link_to 'Login', "login" %>
+		<%= link_to 'Login', new_devise_path %>
 		<p></p>
 		<%= link_to 'Template', profile_page_path %>
 	</div>
